# ecosystem

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXTENDING.md  FUTURE.md  LICENSE  README.md  TODO.md  config.py  pyproject.toml  requirements.txt  run_experiment.py  run_live.py  train_neural_brain.py  v1.md
analysis/: logger.py  monitor.py  plots.py
backup/: README.md  neural_brain.py  train_neural_brain.py
darwinism/: __init__.py  __main__.py  config.py
darwinism/analysis/: __init__.py  logger.py  monitor.py  plots.py
darwinism/cli/: __init__.py  experiment.py  live.py
darwinism/render/: viewer.py
darwinism/sim/: brain.py  entities.py  environment.py  genome.py  grid.py  hydrology.py  perception.py  policy_brain.py  simulation.py  world.py
darwinism/sim/systems/: __init__.py  brain_system.py  consumption.py  metabolism.py  movement.py  pipeline.py  reproduction.py  sleep.py
docs/v1/: OVERVIEW.md  TECHNICAL.md  v1.md
docs/v2/: OVERVIEW.md  TECHNICAL.md
ecosystem/: main.py
ecosystem/config/: parameters.py  settings.py
ecosystem/data/tiles/: WhatsApp_Image_2025-03-26_at_11.26.24_PM-removebg-preview (1).tsx  WhatsApp_Image_2025-03-26_at_11.26.24_PM-removebg-preview (3).tsx  WhatsApp_Image_2025-03-26_at_11.26.24_PM-removebg-preview (4).tsx  WhatsApp_Image_2025-03-26_at_11.26.24_PM__2_-removebg-preview.tsx  base.csv  map.tmx  map_plants.csv  sheep.tsx  sheep_test.tsx  sheep_tile.tsx
ecosystem/entities/: base.py  fox.py  plant.py  sheep.py
ecosystem/environment/: ecosystem.py  tile.py  views.py
examples/: custom_brain.py  custom_species.py  custom_system.py  headless_run.py
notebooks/: common.py  generate_fox_vision_ds.ipynb  train_model_fox.ipynb
notebooks/imitation_learning/: collect.ipynb  common.py  evaluate.ipynb  imitation.py  train_fox.ipynb  train_sheep.ipynb
notebooks/live_learning/: ppo_live.py  train.ipynb  train_fox.ipynb  train_sheep.ipynb
notebooks/live_learning/offline/: offline_rl.py  train_fox.ipynb
notebooks/vision/fox/: generate_dataset.ipynb  show_dataset.py  train_model_fox.ipynb  validate.ipynb
notebooks/vision/sheep/: generate_dataset.ipynb  show_dataset.py  train_model.ipynb
notebooks/vision_learning/fox/: generate_dataset.ipynb  show_dataset.py  train_model.ipynb  validate.ipynb
render/: __init__.py  viewer.py
scratchpad/: FUTURE.md  MODELS.md  NOTES.md
sim/: __init__.py  brain.py  entities.py  environment.py  genome.py  grid.py  hydrology.py  perception.py  policy_brain.py  simulation.py  world.py
sim/systems/: __init__.py  brain_system.py  consumption.py  metabolism.py  movement.py  reproduction.py  sleep.py  vegetation.py
tests/: capture_baselines.py  determinism_util.py  test_determinism.py  test_extensions.py
tests/baselines/: golden.json
(+3 files in other folders)
